--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <title>Sigma Fantasy</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-/* FIREBASE */
+<link rel="icon" type="image/png" href="https://i.postimg.cc/d18PNVwv/Icon.png" sizes="32x32">
+<link rel="shortcut icon" type="image/png" href="https://i.postimg.cc/d18PNVwv/Icon.png">
 <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-database-compat.js"></script>
 
